# PopugManagementSystem

./: Dockerfile-popugauth  Dockerfile-popugjira  README.md  docker-compose.yaml  pyproject.toml
src/: utils.py
src/PopuLytics/: manage.py
src/PopuLytics/config/: settings.py
src/PopuLytics/lytics/: asgi.py  settings.py  urls.py  wsgi.py
src/PopugAcc/: manage.py
src/PopugAcc/accounting/: asgi.py  settings.py  urls.py  wsgi.py
src/PopugAcc/config/: settings.py
src/PopugJira/: manage.py
src/PopugJira/config/: settings.py  urls.py
src/PopugJira/jirapug/: asgi.py  settings.py  urls.py  wsgi.py
src/PopugJira/popug_jira/: apps.py  serializers.py  views.py
src/popug_auth/: manage.py
src/popug_auth/config/: settings.py  urls.py
src/popug_auth/popug_auth/: asgi.py  settings.py  urls.py  wsgi.py
src/popug_auth/popugauth/: admin.py  apps.py  models.py  serializers.py  views.py
src/popug_auth/popugauth/migrations/: 0001_initial.py  0002_alter_popug_managers_alter_popug_username.py  0003_popug_email.py  0004_popug_is_superuser.py  0005_popug_groups_popug_user_permissions.py  0006_alter_popug_options_alter_popug_managers_and_more.py
